# ci-microservices-fastapi-example

inventory/: pyproject.toml
orders/: pyproject.toml
orders/orders/: models.py
orders/tests/unit-tests/: test_order_models.py
